# darwin-notes-image-processing

./: CMakeLists.txt  README.md  confirmed_matches.csv
CurveAnalysis/: common_files_clean.py  fft.py  fft_norm.py  fft_similarity.py  fourier_analysis.py  multi_process_fft_sim.py  top_items_sorted.txt
IPythonNotesbooks/: AutoEncoder-Images.ipynb  Cluster Base.ipynb  FFT_Similarity_Clean_By_Curves.ipynb  Plot_edge_on_image.ipynb  Polynomial_fitting.ipynb  downsample.ipynb  line_analysis.ipynb  tensorboard_visualization.ipynb
Scripts/: file_identifiers.csv  images_downloader.py  multi_fft.py  multi_process_files.py  process_files.py
Scripts/display_images/: display_images.pyde
Scripts/display_images_with_curves/: display_images_with_curves.pyde
Segmentation/: CMakeLists.txt  ExtractConnectedComponentFromBinaryImage.cxx  ExtractLargestConnectedComponentFromBinaryImage.cxx  ImageAnalyzer.cxx  ImageAnalyzer.h  ImageAnalyzerLauncher.cxx  ImageLinearIteratorWithIndex.cxx  ImageToEdges.cxx  OtsuThresholdImageFilter.cxx
Visualization/: CMakeLists.txt
Visualization/QuickView/: CMakeLists.txt  QuickView.cxx
