add_executable(ExtractLargestConnectedComponentFromBinaryImage ExtractLargestConnectedComponentFromBinaryImage.cxx)
target_link_libraries(ExtractLargestConnectedComponentFromBinaryImage ${ITK_LIBRARIES})

add_executable(OtsuThresholdImageFilter OtsuThresholdImageFilter.cxx)
target_link_libraries(OtsuThresholdImageFilter ${ITK_LIBRARIES})

